# xyzrender-webapp

./: .gitignore  CHANGELOG.md  README.md  app.py  build_html.py  pyproject.toml  pytest.ini  requirements.txt  start_web.bat  xyzrender_docs.md
FIGURE/: .gitkeep
MOLECULES/: Al2O3-1.cif  Al2O3.cif  EMIMEtSO4.mol  HAN.mol  S-TS.cif  S-TS_rotated.xyz  SiO2_quartz.cif  c2c1im_rotated.xyz  caffeine.xyz  ethanol.xyz
TEMP/: .gitkeep
desktop/: BUILD.md  __init__.py  __main__.py  build.ps1  installer.iss  launcher.py  requirements-desktop.txt  xyzrender_workstation.spec
scripts/: build_html.py
src/xyzrender_workstation/: __init__.py  paths.py
src/xyzrender_workstation/core/: __init__.py  models.py  multiwfn.py  multiwfn_offline.py  option_schema.py  render_service.py  rotation.py
src/xyzrender_workstation/web/: __init__.py  app.py
src/xyzrender_workstation/web/static/: pretty_lattice_refresh.css
src/xyzrender_workstation/web/templates/: index.html
templates/: index.html  script_backup.js
tests/: test_core.py  test_desktop_acceptance.py  test_flask_compat.py  test_multiwfn.py  test_multiwfn_offline.py
