[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xyzrender-workstation"
version = "1.0.0"
description = "xyzrender Flask Web workstation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "numpy>=1.24",
    "xyzrender==0.3.1",
    "ase>=3.26",
    "rdkit>=2025.3",
]

[project.optional-dependencies]
test = ["pytest>=8,<9"]
desktop = ["pywebview>=5.4,<7", "pyinstaller>=6,<7"]

[project.scripts]
xyzrender-web = "xyzrender_workstation.web.app:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"xyzrender_workstation.web" = ["templates/*.html", "static/*.css"]
